# openapi/aep-v1-m0.openapi.yaml
@@ -99,6 +99,18 @@ paths:
     $ref: './aep-v1-authentication.openapi.yaml#/paths/~1admin~1users~1{userId}'
   /aep/v1/admin/users/{userId}/reset-password:
     $ref: './aep-v1-authentication.openapi.yaml#/paths/~1admin~1users~1{userId}~1reset-password'
+  /aep/v1/admin/permissions:
+    $ref: './aep-v1-authentication.openapi.yaml#/paths/~1admin~1permissions'
+  /aep/v1/admin/roles:
+    $ref: './aep-v1-authentication.openapi.yaml#/paths/~1admin~1roles'
+  /aep/v1/admin/roles/{roleId}:
+    $ref: './aep-v1-authentication.openapi.yaml#/paths/~1admin~1roles~1{roleId}'
+  /aep/v1/admin/teams:
+    $ref: './aep-v1-authentication.openapi.yaml#/paths/~1admin~1teams'
+  /aep/v1/admin/teams/{teamId}:
+    $ref: './aep-v1-authentication.openapi.yaml#/paths/~1admin~1teams~1{teamId}'
+  /aep/v1/admin/users/{userId}/rbac:
+    $ref: './aep-v1-authentication.openapi.yaml#/paths/~1admin~1users~1{userId}~1rbac'
   /aep/v1/admin/skills:
     $ref: './aep-v1.openapi.yaml#/paths/~1admin~1skills'
   /aep/v1/admin/skills/{skillId}:
